--- a/package.json
+++ b/package.json
@@ -4,9 +4,18 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "parcel app.js"
+    "serve": "serve",
+    "build": "esbuild app.js --bundle --outfile=dist/app.js --watch"
+
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "esbuild": "^0.21.5",
+    "serve": "^14.2.3"
+  },
+  "dependencies": {
+    "gsap": "^3.12.5"
+  }
 }
